tests/machine/x/kt/min_max_builtin.error
Error on line 0: kotlinc error: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kt/min_max_builtin.kt:3:10: error: unresolved reference: min
	println(min(nums))
         ^
/workspace/mochi/tests/machine/x/kt/min_max_builtin.kt:4:10: error: unresolved reference: max
	println(max(nums))
         ^

1: fun main() {
