tests/machine/x/kt/min_max_builtin.kt
fun main() {
	val nums = listOf(3, 1, 4)
	println(min(nums))
	println(max(nums))
}
